--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                     <h3 class="h3Info">virus-free project just compiled to not leak the source code and the project stops working.</h3>
                 </div>                
                 <div class="DownloadInfo">
-                    <h2 id="txtDownloadInfo">Faça o download do programa:</h2>
+                    <h2 id="txtDownloadInfo">Download the program:</h2>
                 </div>
                 <div style = "margin-bottom: 100px;">
-                    <button id="btnDownload" onclick="opendownloadpage()">Ir para página de download</button>
+                    <button id="btnDownload" onclick="opendownloadpage()">Go to download page</button>
                 </div>
             </div>
         </div>        
